# e-scanmadin

./: 2.py  Dockerfile  admin.py  migrasi.py  p.py  pp.py  pyproject.toml  qw.py  requirements.txt  test.py  test_nm.py  test_omr.py
.vercel/: project.json
app/: build.sh  main.py
app/api/: dependencies.py  router.py
app/api/endpoints/: auth.py  excel.py  koreksi.py  master_kunci.py  pdf.py  profile.py  siswa.py  views.py
app/core/: config.py  exceptions.py  security.py  templates.py
app/database/: connection.py  models.py
app/schemas/: hasil.py  siswa.py  user.py
app/services/: llm_service.py  ocr_service.py  omr_service.py  scorer_service.py  telegram_service.py
app/templates/: base.html  dashboard.html  kelas.html  koreksi.html  login.html  manajemen_kunci.html  profile.html  riwayat_ujian.html  siswa.html
data/: madin.db
data/uploads/: JK akqidah.jfif
