[project]
name = "madin-correction-ai"
version = "0.1.0"
description = "Sistem Koreksi Madrasah Diniyah Berbasis OCR dan OMR dengan pendekatan AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "fpdf2>=2.8.7",
    "google-genai>=1.73.1",
    "imutils>=0.5.4",
    "jinja2>=3.1.6",
    "numpy==1.26.4",
    "opencv-python-headless>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib[argon2]>=1.7.4",
    "pillow>=12.2.0",
    "protobuf>=7.34.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pyseto>=1.9.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "scipy==1.13.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[tool.fastapi]
entrypoint = "app.main:app"
